feat: universe personnage admin integration - amrou